<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f0472e">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="345dp">
        <EditText
            android:id="@+id/cardNumber"
            android:layout_width="254dp"
            android:layout_height="42dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/card_number"
            android:inputType="number"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.396" />

        <EditText
            android:id="@+id/cvv"
            android:layout_width="189dp"
            android:layout_height="39dp"
            android:ems="10"
            android:hint="@string/cvv"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/limitOfWork"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardNumber"
            app:layout_constraintVertical_bias="0.114" />

        <EditText
            android:id="@+id/limitOfWork"
            android:layout_width="189dp"
            android:layout_height="39dp"
            android:ems="10"
            android:hint="@string/last_date_of_work_month_years"
            android:inputType="date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cvv"
            app:layout_constraintTop_toBottomOf="@+id/cardNumber"
            app:layout_constraintVertical_bias="0.114" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="283dp"
            android:layout_height="30dp"
            android:text="@string/lonely_animals_have_no_one_to_be_liked_by"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="260dp"
            android:layout_height="37dp"
            android:text="@string/donate_them_a_bit_of_money_if_you_can"
            app:layout_constraintBottom_toTopOf="@+id/cardNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/amount"
            android:layout_width="222dp"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/amount_of_money_in_usd"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvv"
            app:layout_constraintVertical_bias="0.829" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00E40707"
        android:backgroundTint="#00EB0F0F"
        android:text="@string/pay" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="393dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/catsucks" />
</LinearLayout>